# SourceKitten

./: .bazelrc  .gitattributes  .gitignore  .gitmodules  .swiftlint.yml  .travis.yml  BUILD  CHANGELOG.md  CONTRIBUTING.md  Cartfile  Cartfile.private  Cartfile.resolved  Dangerfile  Dockerfile  Enums.html  Extensions.html  Functions.html  Gemfile  Global Variables.html  MODULE.bazel  Makefile  Package.resolved  Package.swift  Package@swift-4.swift  Protocols.html  README.md  RELEASING.md  Releasing.md  SourceKitten.podspec  SourceKittenFramework.podspec  Typealiases.html  WORKSPACE  azure-pipelines.yml  circle.yml  cmark.patch  index.html  jazzy.sh
.bcr/: metadata.template.json  presubmit.yml  source.template.json
.circleci/: config.yml
.github/workflows/: bazel.yml  jazzy.yml  pod_lib_lint.yml  swiftlint.yml  swiftpm.yml  xcodebuild.yml
Functions/: !=(_:_:).html  ==(_:_:).html  compiler_arguments_from_xcodebuild_output(_:language:).html  insertDoc(_:_:_:_:).html
Source/: BUILD
Source/CSQLite/: anchor.c
Source/Clang_C/: Clang_C.modulemap
Source/SourceKit/: SourceKit.modulemap
Source/SourceKittenFramework/: Accessibility.swift  ByteCount.swift  ByteOffset.swift  ByteRange.swift  Clang+SourceKitten.swift  ClangTranslationUnit.swift  CodeCompletionItem.swift  CursorInfo+Parsing.swift  DeclarationKindType.swift  DeclarationType.swift  Dictionary+Merge.swift  Documentation.swift  DyldHelper.swift  Exec.swift  File+Hashable.swift  File.swift  ImportInfo.swift  Info.plist  JSONOutput.swift  Language.swift  LibraryWrapperGenerator.swift  Line.swift  LinuxCompatibility.swift  Loader.swift  Module.swift  NSLock+SourceKitten.swift  ObjCDeclaration.swift  ObjCDeclarationKind.swift  OffsetMap.swift  Parameter.swift  Request.swift  RequestBuilder.swift  SHA1.swift  SourceDeclaration.swift  SourceKitDef.swift  SourceKitObject.swift  SourceKitRepresentable.swift  SourceKitVariant.swift  SourceKittenConfiguration.swift  SourceKittenFramework.h  (+43 more)
Source/SourceKittenFrameworkTests/: ModuleTests.swift  (+9 more)
SourceKitten/: main.m
SourceKitten.xcodeproj/: project.pbxproj
SourceKitten.xcworkspace/: contents.xcworkspacedata
SwiftPM.xcodeproj/: project.pbxproj
Templates/: AutoEnumNameFix.stencil  TypeDefs.h
Tests/: BUILD  LinuxMain.swift
bazel/: repos.bzl
docs/: index.html
docsets/: sourcekitten.tgz  sourcekitten.xml
script/: Version.swift.template  get-version  spm_bootstrap  spm_teardown
sourcekitten.xcodeproj/: project.pbxproj
tools/: deadcode.sh
(+373 files in other folders)
