module(
    name = "sourcekitten",
    version = "0.34.1",
    compatibility_level = 1,
)

bazel_dep(name = "platforms", version = "0.0.6", dev_dependency = True)
bazel_dep(name = "rules_swift", version = "1.5.1", repo_name = "build_bazel_rules_swift")
bazel_dep(name = "swift_argument_parser", version = "1.2.1", repo_name = "sourcekitten_com_github_apple_swift_argument_parser")
bazel_dep(name = "swxmlhash", version = "7.0.1", repo_name = "sourcekitten_com_github_drmohundro_SWXMLHash")
bazel_dep(name = "yams", version = "5.0.5", repo_name = "sourcekitten_com_github_jpsim_yams")
